content/classes/3.1/EngineCapabilities.md
---
ID_PAGE: 25116
PG_TITLE: EngineCapabilities
PG_VERSION: 2.1
TAGS:
    -   Engine
---
## Description

class [EngineCapabilities](/classes/3.1/EngineCapabilities)

Regroup several parameters relative to the browser in use

## Members

### maxTexturesImageUnits : number


### maxVertexTextureImageUnits : number


### maxTextureSize : number


### maxCubemapTextureSize : number


### maxRenderTextureSize : number


### maxVertexAttribs : number


### maxVaryingVectors : number


### maxVertexUniformVectors : number


### maxFragmentUniformVectors : number


### standardDerivatives : boolean


### s3tc : Nullable&lt;WEBGL_compressed_texture_s3tc&gt;


### pvrtc : any


### etc1 : any


### etc2 : any


### astc : any


### textureFloat : boolean


### vertexArrayObject : boolean


### textureAnisotropicFilterExtension : Nullable&lt;EXT_texture_filter_anisotropic&gt;


### maxAnisotropy : number


### instancedArrays : boolean


### uintIndices : boolean


### highPrecisionShaderSupported : boolean


### fragmentDepthSupported : boolean


### textureFloatLinearFiltering : boolean


### textureFloatRender : boolean


### textureHalfFloat : boolean


### textureHalfFloatLinearFiltering : boolean


### textureHalfFloatRender : boolean


### textureLOD : boolean


### drawBuffersExtension : boolean


### depthTextureExtension : boolean


### colorBufferFloat : boolean


### timerQuery : EXT_disjoint_timer_query


### canUseTimestampForTimerQuery : boolean


